Bug 1559184 - Fix the damage caused by clang-format to DOMMatrix.h; r=bzbarsky a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D34929

--HG--
extra : source : 3e148406af28449ad570292b1892ac924f269ab4